--- a/src/components/mui_search_bar/styles.css
+++ b/src/components/mui_search_bar/styles.css
@@ -1,12 +1,12 @@
 .mui-search-bar {
-	padding: 10px;
-	height: 70px;
+	padding: 0.625rem;
+	height: 4.375rem;
 }
 
 .mui-search-bar .MuiOutlinedInput-adornedStart {
 	border: solid 0.05rem var(--contrast-color);
-	padding-left: 0px;
-	border-radius: 10px;
+	padding-left: 0rem;
+	border-radius: 0.625rem;
 }
 
 .mui-search-bar .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline,
