--- a/src/views/main/contacts/contact_dialog_card/header/styles.css
+++ b/src/views/main/contacts/contact_dialog_card/header/styles.css
@@ -13,7 +13,7 @@
 
 .contact_dialog_content_header .MuiCardHeader-content {
 	display: block;
-	max-width: 200px;
+	max-width: 12.5rem;
 	overflow-x: hidden;
 }
 
