--- a/src/views/main/contacts/styles.css
+++ b/src/views/main/contacts/styles.css
@@ -6,15 +6,15 @@
 	.contacts__list__item__content
 	.MuiListItem-gutters
 	.MuiListItem-divider {
-	padding: 8px;
+	padding: 0.5rem;
 }
 
 .contacts .contacts__list__item__content .MuiCardContent-root {
-	padding: 8px;
+	padding: 0.5rem;
 }
 
 .contacts .contacts__list__item__content__phones {
-	padding: 5px;
+	padding: 0.313rem;
 }
 
 .contacts__list__item__text {
