--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body .MuiSvgIcon-root {
 }
 
 body .MuiInput-underline:before {
-	border-bottom: 1px solid var(--base-font-color);
+	border-bottom: 0.063rem solid var(--base-font-color);
 }
 
 .MuiDialog-root {
@@ -91,5 +91,5 @@ body .MuiInput-underline:before {
 }
 
 .MuiCardHeader-action button.button.icon_button {
-	margin: 0px 2px;
+	margin: 0rem 0.125rem;
 }
