--- a/src/components/agreement_dialog/styles.css
+++ b/src/components/agreement_dialog/styles.css
@@ -8,7 +8,7 @@
 }
 
 .alert__dialog_title .MuiDialogActions-root.MuiDialogActions-spacing {
-	border-top: 1px solid rgb(179, 179, 179);
+	border-top: 0.063rem solid rgb(179, 179, 179);
 }
 
 .alert__dialog__description.MuiTypography-body1 {
