--- a/src/components/button/link_button/styles.css
+++ b/src/components/button/link_button/styles.css
@@ -5,7 +5,7 @@ button.link_button {
 	background: none;
 	cursor: pointer;
 	display: block;
-	padding: 7px;
+	padding: 0.438rem;
 	margin: auto;
 }
 
