--- a/src/components/dino_hr/styles.css
+++ b/src/components/dino_hr/styles.css
@@ -1,10 +1,10 @@
 .dino_hr {
-	margin: 10px 0px;
+	margin: 0.625rem 0rem;
 	border-color: var(--contrast-color);
 	opacity: 0.1;
 }
 
-.dino_hr--inv {
-	margin: 10px 0px;
-	border-top: 0px;
+.dino_hr__inv {
+	margin: 0.625rem 0rem;
+	border-top: 0rem;
 }
