--- a/src/components/drawer_navigation/content/app_bar/styles.css
+++ b/src/components/drawer_navigation/content/app_bar/styles.css
@@ -1,6 +1,6 @@
 .drawer__navigation__app_bar {
 	width: 100%;
-	height: 45px;
+	height: 2.813rem;
 	background-color: var(--header-and-menu);
 	display: flex;
 	flex-direction: row;
