--- a/src/components/drawer_navigation/styles.css
+++ b/src/components/drawer_navigation/styles.css
@@ -6,7 +6,7 @@
 }
 
 .drawer_navigation__box {
-	width: calc(100% + 240px);
+	width: calc(100% + 15rem);
 	height: 100%;
 	display: flex;
 	flex-direction: row;
