--- a/src/components/tag_search_bar/styles.css
+++ b/src/components/tag_search_bar/styles.css
@@ -9,7 +9,7 @@
 .tag_search_bar .MuiOutlinedInput-notchedOutline {
 	border-color: var(--contrast-color);
 	border-width: 0.05rem;
-	border-radius: 10px;
+	border-radius: 0.625rem;
 }
 
 .tag_search_bar
