--- a/src/components/weekday_picker/styles.css
+++ b/src/components/weekday_picker/styles.css
@@ -6,26 +6,26 @@
 }
 
 .week_day_picker__weekday_circle {
-	margin: 5px;
-	width: 25px;
-	height: 25px;
+	margin: 0.313rem;
+	width: 1.563rem;
+	height: 1.563rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 .week_day_picker__weekday_circle:first-child {
-	margin-left: 0px;
+	margin-left: 0rem;
 }
 
 .week_day_picker__weekday_circle:last-child {
-	margin-right: 0px;
+	margin-right: 0rem;
 }
 
 .week_day_picker__weekday_circle__button {
 	border-radius: 50%;
-	padding: 0px;
-	border-width: 0px;
+	padding: 0rem;
+	border-width: 0rem;
 	width: 100%;
 	height: 100%;
 	background-color: rgb(221, 221, 221);
@@ -39,5 +39,5 @@
 }
 
 .week_day_picker__weekday_circle__button .MuiButton-text {
-	padding: 0px;
+	padding: 0rem;
 }
