--- a/src/views/about/styles.css
+++ b/src/views/about/styles.css
@@ -5,7 +5,7 @@
 	color: var(--base-font-color);
 	width: 100%;
 	height: 100%;
-	padding: 30px;
+	padding: 1.875rem;
 	overflow-y: auto;
 	overflow-x: hidden;
 	text-align: justify;
@@ -19,14 +19,14 @@
 	font-size: var(--large-font);
 }
 
-.about-us .MuiPaper-root {
+.about_us .MuiPaper-root {
 	background-color: none;
 }
 
 .card__header {
-	padding: 0px;
+	padding: 0rem;
 }
 
 .card__content {
-	padding: 0px;
+	padding: 0rem;
 }
