--- a/src/views/main/calendar/add_button/styles.css
+++ b/src/views/main/calendar/add_button/styles.css
@@ -1,9 +1,9 @@
 .calendar__add_button .MuiFab-primary {
 	position: fixed;
-	width: 50px;
-	height: 50px;
-	bottom: 85px;
-	right: 10px;
+	width: 3.125rem;
+	height: 3.125rem;
+	bottom: 5.313rem;
+	right: 0.625rem;
 	background-color: #7abe2c;
 	color: white;
 	outline: none;
