--- a/src/views/main/calendar/day_modal/content/styles.css
+++ b/src/views/main/calendar/day_modal/content/styles.css
@@ -12,7 +12,7 @@
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
-	padding-top: 50px;
+	padding-top: 3.125rem;
 	overflow-y: auto;
 }
 
@@ -21,7 +21,7 @@
 	align-items: center;
 	flex-direction: row;
 	width: 100%;
-	min-height: 40px;
+	min-height: 2.5rem;
 }
 
 .calendar__day__modal__hours__hours_list__line__hour {
@@ -30,39 +30,39 @@
 	justify-content: center;
 	width: 16%;
 	height: 100%;
-	border-right: 1px #b9b9a2 solid;
+	border-right: 0.063rem #b9b9a2 solid;
 	font-size: 1em;
-	transform: translate3d(0, -10px, 0);
+	transform: translate3d(0, -0.625rem, 0);
 }
 
 .calendar__day__modal__hours__hours_list__line.today:nth-last-child(2)
 	> .calendar__day__modal__hours__hours_list__line__hour {
-	height: 50px;
-	transform: translate3d(0px, -5px, 0px);
+	height: 3.125rem;
+	transform: translate3d(0rem, -0.313rem, 0rem);
 }
 
 .calendar__day__modal__hours__hours_list__line.n_today:nth-last-child(1)
 	> .calendar__day__modal__hours__hours_list__line__hour {
-	height: 50px;
-	transform: translate3d(0px, -5px, 0px);
+	height: 3.125rem;
+	transform: translate3d(0rem, -0.313rem, 0rem);
 }
 
 .calendar__day__modal__hours__hours_list__line__hour p {
 	margin-bottom: 0;
-	height: 20px;
+	height: 1.25rem;
 }
 
 .calendar__day__modal__hours__hours_list__line__events {
-	width: calc(84% + 5px);
-	min-height: 40px;
-	max-height: 40px;
-	margin-right: -5px;
+	width: calc(84% + 0.313rem);
+	min-height: 2.5rem;
+	max-height: 2.5rem;
+	margin-right: -0.313rem;
 	display: flex;
 	flex-direction: row;
-	border-bottom: 1px #b9b9a2 solid;
-	padding-left: 10px;
-	padding-right: 5px;
-	transform: translate3d(-5px, 0, 0);
+	border-bottom: 0.063rem #b9b9a2 solid;
+	padding-left: 0.625rem;
+	padding-right: 0.313rem;
+	transform: translate3d(-0.313rem, 0, 0);
 	pointer-events: none;
 }
 
@@ -79,8 +79,8 @@
 .calendar__day__modal__now_line {
 	position: absolute;
 	width: 100%;
-	height: 2px;
+	height: 0.125rem;
 	background-color: red;
-	width: calc(84% + 5px);
-	left: calc(16% - 5px);
+	width: calc(84% + 0.313rem);
+	left: calc(16% - 0.313rem);
 }
