--- a/src/views/main/calendar/edit_event_modal/form/alarm_item/styles.css
+++ b/src/views/main/calendar/edit_event_modal/form/alarm_item/styles.css
@@ -1,10 +1,10 @@
 .calendar__add__modal__event_alert_item {
-	padding-bottom: 6px;
-	padding-top: 6px;
+	padding-bottom: 0.375rem;
+	padding-top: 0.375rem;
 	display: flex;
 	align-items: center;
 	width: 100%;
-	margin-right: -48px;
+	margin-right: -3rem;
 }
 
 .calendar__add__modal__event_alert_item__delete_button.MuiButtonBase-root.MuiButton-root {
