--- a/src/views/main/calendar/edit_event_modal/form/styles.css
+++ b/src/views/main/calendar/edit_event_modal/form/styles.css
@@ -8,10 +8,10 @@
 
 .calendar__edit_event_modal__form__space_line {
 	width: 100%;
-	height: 1px;
+	height: 0.063rem;
 	background-color: rgba(200, 200, 200, 0.5);
-	margin-bottom: 10px;
-	margin-top: 10px;
+	margin-bottom: 0.625rem;
+	margin-top: 0.625rem;
 }
 
 .calendar__edit_event_modal__form__weekday_picker {
@@ -29,7 +29,7 @@
 }
 
 .calendar__edit_event_modal__event_name_text_field.MuiFormControl-root {
-	margin-bottom: 20px;
+	margin-bottom: 1.25rem;
 }
 
 .calendar__add__modal__form__date_picker.MuiFormControl-root.MuiTextField-root {
@@ -42,7 +42,7 @@
 
 .calendar__add__modal__event_repeat_button.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary,
 .calendar__add__modal__event_alert_button.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
-	padding-left: 0px;
+	padding-left: 0rem;
 	outline: none !important;
 	width: 100%;
 	display: flex;
@@ -58,10 +58,10 @@
 }
 
 .calendar__edit_event_modal__form__color_selection__color_cicle {
-	width: 24px;
-	height: 24px;
-	border-radius: 50px;
-	margin-left: 10px;
+	width: 1.5rem;
+	height: 1.5rem;
+	border-radius: 3.125rem;
+	margin-left: 0.625rem;
 }
 
 .calendar__edit_event_modal__form__color_selection__label {
