--- a/src/views/main/calendar/month/content/week_day_column/content/styles.css
+++ b/src/views/main/calendar/month/content/week_day_column/content/styles.css
@@ -3,9 +3,9 @@
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
-	border-right: #b9b9a2 1px solid;
+	border-right: #b9b9a2 0.063rem solid;
 }
 
 .calendar__month__content__week_day_column__content.with_two_borders {
-	border-left: #b9b9a2 1px solid;
+	border-left: #b9b9a2 0.063rem solid;
 }
