--- a/src/views/main/contacts/contact_dialog_form/header/styles.css
+++ b/src/views/main/contacts/contact_dialog_form/header/styles.css
@@ -2,7 +2,7 @@
 	display: block;
 	white-space: nowrap;
 	text-overflow: ellipsis;
-	max-width: 200px;
+	max-width: 12.5rem;
 	overflow-x: hidden;
 	font-size: var(--default-font);
 }
