--- a/src/views/main/faq/faq_items/styles.css
+++ b/src/views/main/faq/faq_items/styles.css
@@ -1,16 +1,16 @@
-.faq-items {
-	padding: 4px 8px 8px;
+.faq_items {
+	padding: 0.25rem 0.5rem 0.5rem;
 	font-size: var(--default-font);
 }
 
-.faq-items__title {
-	margin: 5px 5px 10px;
+.faq_items__title {
+	margin: 0.313rem 0.313rem 0.625rem;
 }
 
-.faq-items__title p {
+.faq_items__title p {
 	font-size: var(--default-font);
 }
 
-.faq-items__accordion {
-	padding: 0px;
+.faq_items__accordion {
+	padding: 0rem;
 }
