--- a/src/views/main/notes/content/column/header/styles.css
+++ b/src/views/main/notes/content/column/header/styles.css
@@ -1,5 +1,5 @@
 .note__note_content__column__column_header {
-	height: 20px;
+	height: 1.25rem;
 	display: flex;
 	flex-direction: row;
 	color: var(--column-border);
@@ -13,7 +13,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	margin-bottom: 0;
-	margin-top: 10px;
+	margin-top: 0.625rem;
 	font-weight: normal;
 }
 
@@ -27,8 +27,8 @@
 
 .note__note_content__column__column_header__button_div__button {
 	padding: 0;
-	height: 42px;
-	width: 30px;
+	height: 40.125rem;
+	width: 1.875rem;
 }
 
 .note__note_content__column__column_header__button_div__button svg {
