--- a/src/views/main/notes/content/styles.css
+++ b/src/views/main/notes/content/styles.css
@@ -5,7 +5,7 @@
 .note__note_content__columns {
 	width: 100%;
 	height: 100%;
-	padding: 0px;
+	padding: 0rem;
 }
 
 .note__note_content__columns__scroll {
