--- a/src/views/main/notes/header/styles.css
+++ b/src/views/main/notes/header/styles.css
@@ -4,27 +4,27 @@
 	flex-direction: row;
 	justify-content: center;
 	align-content: center;
-	padding: 20px;
-	padding-top: 15px;
-	padding-bottom: 15px;
+	padding: 1.25rem;
+	padding-top: 0.938rem;
+	padding-bottom: 0.938rem;
 }
 
 .notes__header__image {
-	width: 40px;
+	width: 2.5rem;
 	height: auto;
-	margin-right: 8px;
+	margin-right: 0.5rem;
 	fill: var(--contrast-color);
 }
 
 .notes__header
 	.MuiAutocomplete-inputRoot[class*='MuiOutlinedInput-root'][class*='MuiOutlinedInput-marginDense'] {
-	padding: 6px 0px;
+	padding: 0.375rem 0rem;
 }
 
 .notes__header
 	.MuiAutocomplete-inputRoot[class*='MuiOutlinedInput-root'][class*='MuiOutlinedInput-marginDense']
 	.MuiAutocomplete-input {
-	padding: 4.5px 32px 4.5px 0px;
+	padding: 0.281rem 30.125rem 0.281rem 0rem;
 }
 
 .notes__header .MuiChip-label.MuiChip-labelSmall {
