--- a/src/views/main/notes/note_create_dialog/styles.css
+++ b/src/views/main/notes/note_create_dialog/styles.css
@@ -1,11 +1,11 @@
 .note_create_dialog .MuiFormControl-root.MuiTextField-root {
-	margin-bottom: 16px;
+	margin-bottom:  1rem;
 	width: 100%;
 }
 
 .note_create_dialog .MuiDialogTitle-root {
 	background-color: var(--header-and-menu);
-	margin-bottom: 8px;
+	margin-bottom: 0.5rem;
 }
 
 .note_create_dialog .MuiTypography-root.MuiTypography-h6 {
