--- a/src/views/main/notes/note_info_dialog/styles.css
+++ b/src/views/main/notes/note_info_dialog/styles.css
@@ -13,11 +13,11 @@
 }
 
 .note_info_dialog__title.MuiDialogTitle-root {
-	padding-bottom: 8px;
+	padding-bottom: 0.5rem;
 }
 
 .note_info_dialog__last_update {
-	padding: 0px 24px 16px 24px;
+	padding: 0rem 1.5rem  1rem 1.5rem;
 }
 .note_info_dialog__last_update h3 {
 	font-size: small;
@@ -29,7 +29,7 @@
 }
 
 .note__info_dialog__content.MuiDialogContent-root {
-	padding-top: 8px;
+	padding-top: 0.5rem;
 	overflow-y: visible;
 }
 
@@ -39,7 +39,7 @@
 
 .note__info_dialog__content__answer.MuiFormControl-root {
 	width: 100%;
-	margin-bottom: 8px;
+	margin-bottom: 0.5rem;
 }
 
 .note__info_dialog__title__question .MuiInputBase-root {
@@ -50,7 +50,7 @@
 }
 
 .note_info_dialog__title .svg_button.MuiButtonBase-root.MuiButton-root {
-	padding-top: 7px;
+	padding-top: 0.438rem;
 	margin-left: auto;
 }
 
