Feat(ReactCreactApp): Atualização para a versão 4
A versão 4 permite a criação de webservices inteiramente customizáveis. O que será necessário.

--- a/src/views/main/notes/note_info_dialog/styles.css
+++ b/src/views/main/notes/note_info_dialog/styles.css
@@ -7,7 +7,7 @@
 .note_info_dialog__last_update {
 	width: 100%;
 	background-color: var(--header-and-menu);
-	font-weight: bold;
+	font-weight: 700;
 	color: var(--column-font-color);
 	font-size: var(--small-font);
 }
@@ -44,7 +44,7 @@
 
 .note__info_dialog__title__question .MuiInputBase-root {
 	font-size: var(--default-font);
-	font-weight: bold;
+	font-weight: 700;
 	color: var(--column-font-color);
 	height: 100%;
 }
