--- a/src/components/button/google_login/styles.css
+++ b/src/components/button/google_login/styles.css
@@ -9,7 +9,7 @@
 	color: #ff0000;
 	padding: 2px;
 	background-color: rgba(0, 0, 0, 0.3);
-	font-weight: bold;
+	font-weight: 700;
 }
 
 .google_login_button__button button {
