--- a/src/views/main/notes/content/add_column/styles.css
+++ b/src/views/main/notes/content/add_column/styles.css
@@ -23,7 +23,7 @@
 	font-size: var(--small-font);
 	margin-bottom: 0;
 	margin-top: 0;
-	font-weight: bold;
+	font-weight: 700;
 	color: var(--column-border);
 }
 
