--- a/src/views/main/notes/content/column/header/styles.css
+++ b/src/views/main/notes/content/column/header/styles.css
@@ -14,7 +14,7 @@
 	overflow: hidden;
 	margin-bottom: 0;
 	margin-top: 10px;
-	font-weight: normal;
+	font-weight: 400;
 }
 
 .note__note_content__column__column_header__button_div {
