--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -1,10 +1,3 @@
-.dinogotchi_screen__dino_pet{
-    position: absolute;
-    bottom: 4rem;
-    width: 80vmin;
-    left: 10vmin;
-}
-
 .dinogotchi_screen {
     position: relative;
     width: 100%;
@@ -12,6 +5,13 @@
     background-image: url('../../../assets/kids_space/dinogotchi/1.png');
     background-size: 100vh;
     background-repeat: no-repeat;
+}
+
+.dinogotchi_screen__dino_pet{
+    position: absolute;
+    bottom: 4rem;
+    width: 80vmin;
+    left: 10vmin;
 }
 
 .dinogotchi_screen__header svg{
@@ -36,4 +36,5 @@
 
 .dinogotchi_screen__options svg{
     width: 4rem;
+    height: 4rem;
 }
