--- a/src/views/kids_space/menu/styles.css
+++ b/src/views/kids_space/menu/styles.css
@@ -1,5 +1,8 @@
 .game_menu {
+    width: 100%;
+    height: 100%;
     background-color: #A594AB;
+    font-size: var(--very-large-font);
 }
 
 .game_card {
