--- a/src/views/staff_main/staff_moderation/styles.css
+++ b/src/views/staff_main/staff_moderation/styles.css
@@ -33,3 +33,23 @@
   padding: 0px 4px;
   width: fit-content;
 }
+
+.staff_moderation .add_staff {
+	width: 100%;
+	height: 100%;
+	padding: 2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+}
+
+.staff_moderation .add_staff p.add_staff__title  {
+	font-size: var(--big-font);
+	margin-bottom: 1rem;
+}
+
+.staff_moderation .dialog_form__content {
+  padding: 0px;
+}
