Feat (Sign in staff interface): already linked to user interface

--- a/src/views/login_staff/styles.css
+++ b/src/views/login_staff/styles.css
@@ -2,7 +2,7 @@
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	padding-top: 45%;
+	padding: 0;
 	height: 100%;
 	background-color: var(--login-background);
 	display: flex;
