--- a/src/views/register_staff/styles.css
+++ b/src/views/register_staff/styles.css
@@ -72,7 +72,7 @@
 	margin-left: 17%;
 }
 
-.staff_login__content__signin_form input[type=email], input[type=password] {
+.staff_login__content__signin_form input[type=email], input[type=password], input[type="text"] {
 	width: 70%;
 	padding: 0.2rem;
 	margin: 0.313rem 0 1.375rem 0;
@@ -81,7 +81,7 @@
 	background: #f1f1f1;
 }
   
-.staff_login__content__signin_form input[type=email]:focus, input[type=password]:focus {
+.staff_login__content__signin_form input[type=email]:focus, input[type=password]:focus, input[type="text"]:focus {
 	background-color: #f5f5f5;
 	outline: none;
 }
