--- a/src/views/main/notes/content/styles.css
+++ b/src/views/main/notes/content/styles.css
@@ -1,6 +1,7 @@
 .note__note_content {
 	overflow-x: auto;
-	margin-bottom: 1rem;
+	padding-bottom: 1rem;
+	height: 100%;
 }
 .note__note_content__columns {
 	width: 100%;
