--- a/src/views/kids_space/menu/styles.css
+++ b/src/views/kids_space/menu/styles.css
@@ -1,16 +1,16 @@
 .game_menu {
-    width: 100%;
-    height: 100%;
-    background-color: #A594AB;
-    font-size: var(--very-large-font);
+	width: 100%;
+	height: 100%;
+	background-color: #a594ab;
+	font-size: var(--very-large-font);
 }
 
 .game_card {
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.go_back svg{
-    width: 3rem;
-    height: 3rem;
-    margin: 1rem 0rem 0rem 1rem;
+.go_back svg {
+	width: 3rem;
+	height: 3rem;
+	margin: 1rem 0rem 0rem 1rem;
 }
