--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -1,40 +1,40 @@
 .dinogotchi_screen {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-image: url('../../../assets/kids_space/dinogotchi/1.png');
-    background-size: 100vh;
-    background-repeat: no-repeat;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-image: url('../../../assets/kids_space/dinogotchi/1.png');
+	background-size: 100vh;
+	background-repeat: no-repeat;
 }
 
-.dinogotchi_screen__dino_pet{
-    position: absolute;
-    bottom: 4rem;
-    width: 80vmin;
-    left: 10vmin;
+.dinogotchi_screen__dino_pet {
+	position: absolute;
+	bottom: 4rem;
+	width: 80vmin;
+	left: 10vmin;
 }
 
-.dinogotchi_screen__header svg{
-    width: 4rem;
-    height: 4rem;
-    margin: 1.5rem 0rem 0rem 1.5rem;
-    fill: #A594AB;
+.dinogotchi_screen__header svg {
+	width: 4rem;
+	height: 4rem;
+	margin: 1.5rem 0rem 0rem 1.5rem;
+	fill: #a594ab;
 }
 
 .dinogotchi_screen__options {
-    position: absolute;
-    right: 7vw;
+	position: absolute;
+	right: 7vw;
 }
 
-.dinogotchi_screen__options .circular_button{
-    height: 4.5rem;
-    width: 4.5rem;
-    background-color: #A594AB;
-    margin-bottom: 1.5rem;
-    padding: 0.85rem;
+.dinogotchi_screen__options .circular_button {
+	height: 4.5rem;
+	width: 4.5rem;
+	background-color: #a594ab;
+	margin-bottom: 1.5rem;
+	padding: 0.85rem;
 }
 
-.dinogotchi_screen__options svg{
-    width: 4rem;
-    height: 4rem;
+.dinogotchi_screen__options svg {
+	width: 4rem;
+	height: 4rem;
 }
