Refactor(Class Names)

--- a/src/components/form_content/styles.css
+++ b/src/components/form_content/styles.css
@@ -5,3 +5,6 @@
 .dialog_form__content .dialog_form__content__textfield {
   margin: 16px 0px;
 }
+.dialog_form__content button.dialog_form__content__save_button {
+  padding: 16px;
+}
