--- a/src/components/dialogs/dino_dialog/styles.css
+++ b/src/components/dialogs/dino_dialog/styles.css
@@ -14,6 +14,8 @@
 	display: flex;
 	align-items: center;
 	margin-right: 8px;
+	color: white;
+	font-size: var(--large-font);
 }
 
 .dino_dialog__header h5,
@@ -23,4 +25,8 @@
 
 .dino_dialog__content {
 	padding: 1.3rem;
+}
+
+.dino_dialog .dino_dialog__actions {
+	padding: 8px;
 }
