--- a/src/views/main/notes/content/column/styles.css
+++ b/src/views/main/notes/content/column/styles.css
@@ -15,6 +15,7 @@
 	border-radius: 8px;
 	padding: 10px 15px 10px 15px;
 	width: 270px;
+	height: inherit;
 }
 
 .note__note_content__column:first-of-type {
