--- a/src/views/main/notes/content/styles.css
+++ b/src/views/main/notes/content/styles.css
@@ -1,16 +1,20 @@
 .note__note_content {
 	overflow-x: auto;
 	margin-bottom: 1rem;
+	height: 100%;
+
 }
 .note__note_content__columns {
 	width: 100%;
-	height: 100%;
+	height: inherit;
 	padding: 0px;
+	height: inherit;
+
 }
 
 .note__note_content__columns__scroll {
 	width: 100%;
-	height: 100%;
+	height: inherit;
 	display: flex;
 	flex-wrap: nowrap;
 	flex-direction: row;
