--- a/src/views/login_staff/styles.css
+++ b/src/views/login_staff/styles.css
@@ -22,7 +22,7 @@
 
 .staff_login__content__message_2 {
 	font-size: var(--large-font);
-	color: #F1D881;
+	color: var(--home-icons);
 }
 
 .staff_login__content__button {
@@ -58,7 +58,7 @@
 
 .staff_login__content__signin {
 	width: 100%;
-	margin-left: 6rem;
+	margin: 0 3rem;
 }
 
 .staff_login__content__signup {
@@ -66,32 +66,34 @@
 }
 
 .staff_login__content__signup .button {
-	background-color: #F1D881;
-	color: #121212;
+	background-color: var(--home-icons);
+	color: var(--dark-color);
 	font-weight: bold;
-	margin-left: 17%;
+	margin-top: 2vw;
 }
 
 .staff_login__content__signin_form input[type=email], input[type=password] {
-	width: 70%;
+	width: 80%;
+	max-height: 1.5rem;
 	padding: 0.2rem;
-	margin: 0.313rem 0 1.375rem 0;
+	margin: 0.313rem 0 0.5rem 0;
 	display: inline-block;
 	border: none;
-	background: #f1f1f1;
+	border-radius: 0.313rem;
+	background: var(--input-background);
 }
   
 .staff_login__content__signin_form input[type=email]:focus, input[type=password]:focus {
-	background-color: #f5f5f5;
 	outline: none;
 }
 
 .staff_login__content__signin_form input[type=submit] {
-	color: #f5f5f5;
-	background-color: #121212;
+	color: var(--base-font-color);
+	background-color:var(--header-and-menu);
 	border: none;
 	border-radius: 0.3rem;
 	padding: 0.5rem 1rem;
+	margin-top: 3vh;
 }
 
 @media (orientation: landscape) {
