--- a/src/views/register_staff/styles.css
+++ b/src/views/register_staff/styles.css
@@ -1,13 +1,13 @@
-.staff_login__content__signin_form {
+.staff_registry__content__signin_form {
 	margin-top: 1rem;
 }
 
-.staff_login {
+.staff_registry {
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	padding: 0;
 	height: 100%;
+	padding: 10vmin;
 	background-color: var(--login-background);
 	display: flex;
 	flex-direction: column;
@@ -15,27 +15,19 @@
 	justify-content: center;
 }
 
-.staff_login__logo {
-	width: 10rem;
-	height: auto;
-}
-
-.staff_login__content__message_2 {
+.staff_registry__content__message_2 {
+	margin-top: 10vmin;
 	font-size: var(--large-font);
-	color: #F1D881;
+	color: var(--home-icons);
 }
 
-.staff_login__content__button {
-	margin-top: 5rem;
-}
-
-.staff_login__content__message {
+.staff_registry__content__message {
 	text-align: center;
 	font-size: var(--large-font);
 	color: var(--light-color);
 }
 
-.staff_login__content__info {
+.staff_registry__content__info {
 	margin-top: auto;
 	display: flex;
 	flex-direction: column;
@@ -43,62 +35,69 @@
 	margin-bottom: 0.5rem;
 }
 
-.staff_login__content__info p {
+.staff_registry__content__info p {
 	margin-bottom: 0.55rem;
 	margin-left: 0.15rem;
 	margin-right: 0.15rem;
 }
 
-.staff_login__content__info .link_button {
+.staff_registry__content__info .link_button {
 	padding: 0;
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.2rem;
 	text-align: center;
 	font-size: var(--small-font);
 }
 
-.staff_login__content__signin {
+.staff_registry__content__signin {
 	width: 100%;
 	margin-left: 6rem;
 }
 
-.staff_login__content__signup {
+.staff_registry__content__signup {
 	margin-top: 1.5rem;
 }
 
-.staff_login__content__signup .button {
-	background-color: #F1D881;
-	color: #121212;
-	font-weight: bold;
-	margin-left: 17%;
+.staff_registry__content__signin_form label {
+	margin-bottom: 0.2rem;
 }
 
-.staff_login__content__signin_form input[type=email], input[type=password], input[type="text"] {
-	width: 70%;
+.staff_registry__content__signin_form input[type=email], input[type=password], input[type="text"] {
+	width: 90%;
+	max-height: 1.5rem;
 	padding: 0.2rem;
-	margin: 0.313rem 0 1.375rem 0;
+	margin: 0.313rem 0 0.5rem 0;
 	display: inline-block;
 	border: none;
-	background: #f1f1f1;
+	border-radius: 0.313rem;
+	background: var(--input-background);
 }
   
-.staff_login__content__signin_form input[type=email]:focus, input[type=password]:focus, input[type="text"]:focus {
-	background-color: #f5f5f5;
+.staff_registry__content__signin_form input[type=email]:focus, input[type=password]:focus, input[type="text"]:focus {
 	outline: none;
 }
 
-.staff_login__content__signin_form input[type=submit] {
-	color: #f5f5f5;
-	background-color: #121212;
+.staff_registry__content__signin_form input[type=submit] {
+	color: var(--base-font-color);
+	background-color:var(--header-and-menu);
 	border: none;
 	border-radius: 0.3rem;
 	padding: 0.5rem 1rem;
+	margin: 3vh 0 5vh 40vw;
+}
+
+.staff_registry__content__signin_form input[type=checkbox] {
+	height: 1.25rem;
+	width: 1.25rem;
+	margin: 0.5rem 0.5rem 0 0;
+	box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+}
+
+#agreement {
+	font-size: var(--small-font);
 }
 
 @media (orientation: landscape) {
-	.staff_login__logo {
-		width: 500px;
-	}
-	.staff_login__message {
+	.staff_registry__message {
 		font-size: xx-large;
 	}
 }
