--- a/src/components/settings/first_settings_dialog/styles.css
+++ b/src/components/settings/first_settings_dialog/styles.css
@@ -12,11 +12,6 @@
 	padding: 16px;
 }
 
-.first-settings__dialog {
-	min-width: 80%;
-	min-height: 50%;
-}
-
 .first-settings__dialog h5 {
 	font-size: var(--big-font);
 }
@@ -35,6 +30,10 @@
 
 .first-settings__dialog .MuiInputBase-root {
 	font-size: var(--default-font);
+}
+
+.first_settings__message_dialog { 
+	padding: 16px 20px;
 }
 
 .first_settings__message_dialog .citation {
