--- a/src/views/kids_space/snake_game/styles.css
+++ b/src/views/kids_space/snake_game/styles.css
@@ -31,7 +31,7 @@ and (max-device-width: 1223px) {
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
-    background-image: url(../../../../assets/kids_space/snake/outter_board_background.png);
+    background-image: url(../../../assets/kids_space/snake/outter_board_background.png);
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -82,7 +82,7 @@ p {
 }
 
 #game-board {
-    background-image: url(../../../../assets/kids_space/snake/inner_board_background.png);
+    background-image: url(../../../assets/kids_space/snake/inner_board_background.png);
     background-size: contain;
     height: 100vmin;
     width: 100vmin;
