--- a/src/views/kids_space/snake_game/styles.css
+++ b/src/views/kids_space/snake_game/styles.css
@@ -21,19 +21,6 @@
     margin: 0; 
 }
 
-
-button {
-    background-color: #f5f5f5;
-    color: #694E73;
-    float: right;
-    border-radius: 0.6rem;
-    border: none;
-    margin-left: 1rem;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-}
-
 .snake_game__food {
     width: 100%;
 }
@@ -53,7 +40,7 @@ button {
 }
 
 #snake_game__score_board {
-    background-color: #694E73;
+    background-color: var(--snake-game-score-background-color);
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
@@ -64,20 +51,7 @@ button {
 }
 
 #snake_game__score_board p {
+    font-size: var(--very-large-font);
     font-weight: bold;
     margin-bottom: 0;
-}
-
-.snake_game__dialog p {
-	font-size: var(--default-small-font);
-}
-
-.snake_game__dialog__buttons {
-	margin-left: auto;
-	padding: 0.5rem;
-}
-
-.snake_game__dialog__buttons__accept_button.MuiButtonBase-root {
-	background-color: var(--header-and-menu);
-	margin-left: 0.5rem;
 }
