--- a/src/views/kids_space/musical_dino/styles.css
+++ b/src/views/kids_space/musical_dino/styles.css
@@ -8,7 +8,19 @@ body {
 
 #turn {
    color: #f5f5f5;
-   font-size: 1rem;
+   font-size: var(--titan-font);
+   margin-left: auto;
+   padding: 0.5rem;
+}
+
+.header {
+    display: flex;
+    padding: 1rem;
+}
+
+.header .icon_button svg {
+    width: 3rem;
+    height: 3rem;
 }
   
 .start_game {
