--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -2,9 +2,48 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background-image: url('../../../assets/kids_space/dinogotchi/1.png');
-	background-size: 100vh;
-	background-repeat: no-repeat;
+}
+
+.dinogotchi_screen__background {
+	position: absolute;
+	height: 100vh;
+	width: auto;
+	z-index: -1;
+}
+
+.dinogotchi_screen__background .cloud {
+	transform-box: fill-box;
+	opacity: 0;
+}
+
+.dinogotchi_screen__background #cloud_one {
+	animation-name: dinogotchi_screen__background__cloud_one;
+	animation-timing-function: linear;
+}
+
+.dinogotchi_screen__background #cloud_two {
+	animation-name: dinogotchi_screen__background__cloud_two;
+	animation-timing-function: linear;
+}
+
+.dinogotchi_screen__background #cloud_three {
+	animation-name: dinogotchi_screen__background__cloud_three;
+	animation-timing-function: linear;
+}
+
+.dinogotchi_screen__background #cloud_four {
+	animation-name: dinogotchi_screen__background__cloud_four;
+	animation-timing-function: linear;
+}
+
+.dinogotchi_screen__background #cloud_five {
+	animation-name: dinogotchi_screen__background__cloud_five;
+	animation-timing-function: linear;
+}
+
+.dinogotchi_screen__background #cloud_six {
+	animation-name: dinogotchi_screen__background__cloud_one;
+	animation-timing-function: linear;
 }
 
 .dinogotchi_screen__dino_pet {
@@ -37,4 +76,59 @@
 .dinogotchi_screen__options svg {
 	width: 4rem;
 	height: 4rem;
+}
+
+@keyframes dinogotchi_screen__background__cloud_one {
+	from {
+		transform: translate3d(-60%, 0, 0);
+		opacity: 1;
+	}
+	to {
+		transform: translate3d(70%, 0, 0);
+		opacity: 1;
+	}
+}
+
+@keyframes dinogotchi_screen__background__cloud_two {
+	from {
+		transform: translate3d(-30%, 0, 0);
+		opacity: 1;
+	}
+	to {
+		transform: translate3d(100%, 0, 0);
+		opacity: 1;
+	}
+}
+
+@keyframes dinogotchi_screen__background__cloud_three {
+	from {
+		transform: translate3d(-100%, 0, 0);
+		opacity: 1;
+	}
+	to {
+		transform: translate3d(30%, 0, 0);
+		opacity: 1;
+	}
+}
+
+@keyframes dinogotchi_screen__background__cloud_four {
+	from {
+		transform: translate3d(-100%, 0, 0);
+		opacity: 1;
+	}
+	to {
+		transform: translate3d(30%, 0, 0);
+		opacity: 1;
+	}
+}
+
+@keyframes dinogotchi_screen__background__cloud_five {
+	from {
+		transform: translate3d(-30%, 0, 0);
+		opacity: 1;
+	}
+	to {
+		transform: translate3d(100%, 0, 0);
+		opacity: 1;
+	}
 }
