--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -8,7 +8,6 @@
 	position: absolute;
 	height: 100vh;
 	width: auto;
-	z-index: -1;
 }
 
 .dinogotchi_screen__background .cloud {
@@ -19,31 +18,95 @@
 .dinogotchi_screen__background #cloud_one {
 	animation-name: dinogotchi_screen__background__cloud_one;
 	animation-timing-function: linear;
+	animation-fill-mode: forwards;
 }
 
 .dinogotchi_screen__background #cloud_two {
 	animation-name: dinogotchi_screen__background__cloud_two;
 	animation-timing-function: linear;
+	animation-fill-mode: forwards;
 }
 
 .dinogotchi_screen__background #cloud_three {
 	animation-name: dinogotchi_screen__background__cloud_three;
 	animation-timing-function: linear;
+	animation-fill-mode: forwards;
 }
 
 .dinogotchi_screen__background #cloud_four {
 	animation-name: dinogotchi_screen__background__cloud_four;
 	animation-timing-function: linear;
+	animation-fill-mode: forwards;
 }
 
 .dinogotchi_screen__background #cloud_five {
 	animation-name: dinogotchi_screen__background__cloud_five;
 	animation-timing-function: linear;
+	animation-fill-mode: forwards;
 }
 
 .dinogotchi_screen__background #cloud_six {
 	animation-name: dinogotchi_screen__background__cloud_one;
 	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dinogotchi_screen__background #cloud_seven {
+	animation-name: dinogotchi_screen__background__cloud_one;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dinogotchi_screen__background #cloud_eight {
+	animation-name: dinogotchi_screen__background__cloud_four;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dinogotchi_screen__background #cloud_nine {
+	animation-name: dinogotchi_screen__background__cloud_two;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dinogotchi_screen__background.night .outside_background {
+	fill:rgb(10.5896%,30.589294%,41.958618%);
+	fill-opacity:1;
+	stroke:none;
+}
+
+.dinogotchi_screen__background.day .outside_background {
+	fill:rgb(65.489197%,87.449646%,100%);
+	fill-opacity:1;
+	stroke:none;
+}
+
+.dinogotchi_screen__background.night .cloud {
+	fill:rgb(36.079407%,49.01886%,57.249451%);
+	fill-opacity:1;
+	fill-rule:nonzero;
+	stroke:none;
+}
+
+.dinogotchi_screen__background.day .cloud {
+	fill:rgb(100%,100%,100%);
+	fill-opacity:1;
+	fill-rule:nonzero;
+	stroke:none;
+}
+
+.dinogotchi_screen__background.night .grass {
+	fill:rgb(25.099182%,48.239136%,14.898682%);
+	fill-opacity:1;
+	fill-rule:nonzero;
+	stroke:none;
+}
+
+.dinogotchi_screen__background.day .grass {
+	fill:rgb(52.549744%,81.17981%,39.99939%);
+	fill-opacity:1;
+	fill-rule:nonzero;
+	stroke:none;
 }
 
 .dinogotchi_screen__dino_pet {
@@ -51,6 +114,10 @@
 	bottom: 4rem;
 	width: 80vmin;
 	left: 10vmin;
+}
+
+.dinogotchi_screen__header {
+	position: absolute;
 }
 
 .dinogotchi_screen__header svg {
@@ -63,6 +130,7 @@
 .dinogotchi_screen__options {
 	position: absolute;
 	right: 7vw;
+	top: 15vh;
 }
 
 .dinogotchi_screen__options .circular_button {
@@ -80,55 +148,45 @@
 
 @keyframes dinogotchi_screen__background__cloud_one {
 	from {
-		transform: translate3d(-60%, 0, 0);
-		opacity: 1;
+		transform: translate3d(-300%, 0, 0);
 	}
 	to {
-		transform: translate3d(70%, 0, 0);
-		opacity: 1;
+		transform: translate3d(300%, 0, 0);
 	}
 }
 
 @keyframes dinogotchi_screen__background__cloud_two {
 	from {
-		transform: translate3d(-30%, 0, 0);
-		opacity: 1;
+		transform: translate3d(-100%, 0, 0);
 	}
 	to {
-		transform: translate3d(100%, 0, 0);
-		opacity: 1;
+		transform: translate3d(475%, 0, 0);
 	}
 }
 
 @keyframes dinogotchi_screen__background__cloud_three {
 	from {
-		transform: translate3d(-100%, 0, 0);
-		opacity: 1;
+		transform: translate3d(-500%, 0, 0);
 	}
 	to {
-		transform: translate3d(30%, 0, 0);
-		opacity: 1;
+		transform: translate3d(125%, 0, 0);
 	}
 }
 
 @keyframes dinogotchi_screen__background__cloud_four {
 	from {
-		transform: translate3d(-100%, 0, 0);
-		opacity: 1;
+		transform: translate3d(-425%, 0, 0);
 	}
 	to {
-		transform: translate3d(30%, 0, 0);
-		opacity: 1;
+		transform: translate3d(125%, 0, 0);
 	}
 }
 
 @keyframes dinogotchi_screen__background__cloud_five {
 	from {
-		transform: translate3d(-30%, 0, 0);
-		opacity: 1;
+		transform: translate3d(-150%, 0, 0);
 	}
 	to {
-		transform: translate3d(100%, 0, 0);
-		opacity: 1;
+		transform: translate3d(450%, 0, 0);
 	}
 }
