--- a/src/views/main/faq/faq_items/styles.css
+++ b/src/views/main/faq/faq_items/styles.css
@@ -4,5 +4,17 @@
 }
 
 .faq-items__accordion {
+	margin-top: 16px;
 	padding: 0px;
+}
+
+.faq-items__accordion .card__title {
+	display: flex;
+	margin-bottom: 0.2rem;
+	flex-direction: row;
+	font-size: var(--default-font);
+}
+
+.faq-items__accordion .card__title .icon_button__options {
+	margin-left: auto;
 }
