Feat(Dinogotchi): Finalização do DinoRunner e refatoração do Dinogotchi
Reaproveitamento de componentes + prettier

--- a/src/views/kids_space/menu/styles.css
+++ b/src/views/kids_space/menu/styles.css
@@ -9,7 +9,7 @@
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.go_back svg {
+.game_menu__go_back svg {
 	width: 3rem;
 	height: 3rem;
 	margin: 1rem 0rem 0rem 1rem;
