--- a/src/views/kids_space/dino_runner/styles.css
+++ b/src/views/kids_space/dino_runner/styles.css
@@ -1,65 +1,78 @@
-
 .dino_runner_game {
-	background:
-	radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent),
-	radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent) 0 -50px;
-	background-size:75px 100px;
-	background-color: #FFE1ED;
-  width: 100vw;
-  height: 100vh;
+	background: radial-gradient(
+			circle at 100% 50%,
+			transparent 20%,
+			rgba(255, 255, 255, 0.3) 21%,
+			rgba(255, 255, 255, 0.3) 34%,
+			transparent 35%,
+			transparent
+		),
+		radial-gradient(
+				circle at 0% 50%,
+				transparent 20%,
+				rgba(255, 255, 255, 0.3) 21%,
+				rgba(255, 255, 255, 0.3) 34%,
+				transparent 35%,
+				transparent
+			)
+			0 -50px;
+	background-size: 75px 100px;
+	background-color: #ffe1ed;
+	width: 100vw;
+	height: 100vh;
 }
 
 .dino_runner_game__grid {
-    position: absolute;
-    width: 100vw;
-    height: 40vh;
-    margin-top: 20vh;
-    padding: 1rem;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-start;
-		z-index: 2;
+	position: absolute;
+	width: 100vw;
+	height: 40vh;
+	margin-top: 20vh;
+	padding: 1rem;
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-start;
+	z-index: 2;
 }
 
 .dino_runner_game__grid__character {
-    width: 25vmin;
-    height: 25vmin;
-    max-width: 150px;
-    max-height: 150px;
-    background-image: url('../../../assets/kids_space/dino_runner/fear.svg');
+	width: 25vmin;
+	height: 25vmin;
+	max-width: 150px;
+	max-height: 150px;
+	background-image: url('../../../assets/kids_space/dino_runner/fear.svg');
 }
 
 .dino_runner_game__obstacle {
-    width: 15vmin;
-    height: 15vmin;
-    max-width: 100px;
-    max-height: 100px;
-    background-image: url('../../../assets/kids_space/dino_runner/bacteria.svg');
+	width: 15vmin;
+	height: 15vmin;
+	max-width: 100px;
+	max-height: 100px;
+	background-image: url('../../../assets/kids_space/dino_runner/bacteria.svg');
 }
 
 .dino_runner_game__start_game_button {
-    position: absolute;
-    top: 80vh;
-    left: 35vw;
-    width: 30vw;
-    height: 8vh;
-    max-width: 20rem;
-    max-height: 5rem;
-    background-color: #e274a0;
-    color: #f5f5f5;
-    border: none;
-    text-decoration: none;
-    border-radius: 0.5rem;
+	position: absolute;
+	top: 80vh;
+	left: 35vw;
+	width: 30vw;
+	height: 8vh;
+	max-width: 20rem;
+	max-height: 5rem;
+	background-color: #e274a0;
+	color: #f5f5f5;
+	border: none;
+	text-decoration: none;
+	border-radius: 0.5rem;
 }
 
 .dino_runner_game__grid__background {
-    position: absolute;
-    background-color: #1E344B;
-    width: auto;
-    height: 40vh;
-    margin: 0;
-    margin-top: 20vh;
-    z-index: 1;
+	position: absolute;
+	background-color: #1e344b;
+	width: auto;
+	height: 40vh;
+	margin: 0;
+	margin-top: 20vh;
+	z-index: 1;
 }
 
 .dino_runner_game__grid__background .star {
@@ -93,73 +106,67 @@
 	margin-bottom: 0;
 }
 
-.dino_runner_game__grid__background #star_one {
-  animation-name: dino_runner_game__grid__background__start_one_and_four;
+.dino_runner_game__grid__background #dino_runner__star_one {
+	animation-name: dino_runner_game__grid__background__start_one_and_four;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_two {
-  animation-name: dino_runner_game__grid__background__start_two;
+.dino_runner_game__grid__background #dino_runner__star_two {
+	animation-name: dino_runner_game__grid__background__start_two;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_three {
-  animation-name: dino_runner_game__grid__background__start_three;
+.dino_runner_game__grid__background #dino_runner__star_three {
+	animation-name: dino_runner_game__grid__background__start_three;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_four {
-  animation-name: dino_runner_game__grid__background__start_one_and_four;
+.dino_runner_game__grid__background #dino_runner__star_four {
+	animation-name: dino_runner_game__grid__background__start_one_and_four;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_five {
-  animation-name: dino_runner_game__grid__background__start_five;
+.dino_runner_game__grid__background #dino_runner__star_five {
+	animation-name: dino_runner_game__grid__background__start_five;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_six {
-  animation-name: dino_runner_game__grid__background__start_six;
+.dino_runner_game__grid__background #dino_runner__star_six {
+	animation-name: dino_runner_game__grid__background__start_six;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_seven {
-  animation-name: dino_runner_game__grid__background__start_seven;
+.dino_runner_game__grid__background #dino_runner__star_seven {
+	animation-name: dino_runner_game__grid__background__start_seven;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_eight {
-  animation-name: dino_runner_game__grid__background__start_eight;
+.dino_runner_game__grid__background #dino_runner__star_eight {
+	animation-name: dino_runner_game__grid__background__start_eight;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_nine {
-  animation-name: dino_runner_game__grid__background__start_nine;
+.dino_runner_game__grid__background #dino_runner__star_nine {
+	animation-name: dino_runner_game__grid__background__start_nine;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_ten {
-  animation-name: dino_runner_game__grid__background__start_ten_and_eleven;
+.dino_runner_game__grid__background #dino_runner__star_ten {
+	animation-name: dino_runner_game__grid__background__start_ten_and_eleven;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dino_runner_game__grid__background #star_eleven {
-  animation-name: dino_runner_game__grid__background__start_ten_and_eleven;
-	animation-timing-function: linear;
-	animation-fill-mode: forwards;
-}
-
-.dino_runner_game__grid__background #star_eleven {
+.dino_runner_game__grid__background #dino_runner__star_eleven {
 	animation-name: dino_runner_game__grid__background__start_ten_and_eleven;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
@@ -245,4 +252,3 @@
 		transform: translate3d(-5000%, 0, 0);
 	}
 }
-
