Feat (cute game over dialog without MUI )

--- a/src/components/game_over_dialog/styles.css
+++ b/src/components/game_over_dialog/styles.css
@@ -1,10 +1,35 @@
+.game_over_dialog {
+	background-color: #A594AB;
+	position: fixed;
+	width: 80vw;
+	height: 30vh;
+	padding: 2rem 2rem 0 2rem;
+	border-radius: 1rem;
+	z-index: 10;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+	animation-name: animatetop;
+  	animation-duration: 0.4s
+}
+
+.game_over_dialog__content {
+	text-align: center;
+}
+
 .game_over_dialog__buttons {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
 	justify-content: flex-end;
+	margin-top: 12vmin;
 }
 
-.game_over_dialog__buttons .text_button {
+.game_over_dialog__buttons .button {
+	background-color: #F5F5F5;
+	color: #A594AB;
 	font-size: var(--default-font);
+	margin-left: 1.5rem;
 }
+
+@keyframes animatetop {
+	from {opacity:0}
+	to {opacity:1}
+  }
